<?xml version="1.0"?>
<package format="2">
    <name>robot-state-controller</name>
    <version>0.0.1</version>
    <description>A package to manage the state of simple robots</description>

    <!-- Original Authors and Designers -->
    <maintainer email="dcutting@umich.edu">David Cutting</maintainer>
    <maintainer email="jnarsing@umich.edu">JessRose Narsinghia</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>TODO</license>

    <!-- Club website information -->
    <url type="website">http://www.iscumd.com/</url>
    <url type="repository">https://github.com/iscumd</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>std_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>std_msgs</exec_depend>

    <build_depend>isc_joy</build_depend>
    <build_export_depend>isc_joy</build_export_depend>
    <exec_depend>isc_joy</exec_depend>

    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>rosconsole</build_depend>
    <build_export_depend>rosconsole</build_export_depend>
    <exec_depend>rosconsole</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
